// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
>
  his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</View>
`;

exports[`2. responsive tablet paragraph 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</View>
`;

exports[`3. responsive tablet paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</View>
`;
